@@ -1231,30 +1231,30 @@ resume player</example>
 			<description>Instantly uses the numbered door, just as if you had stepped into it. <note>An automatic <ref>wait</ref>(1) occurs immediately after this command.</note></description>
 		</command>
 		<command id="doorexists">
-			<canon>door exists (number)</canon>
+			<canon>door exists (number, map)</canon>
 			<shortname>door exists</shortname>
-			<description>Returns <ref>true</ref> if there is a door with ID <p>number</p> on the current map. This command is useful for avoiding script errors due to invalid door IDs.</description>
+			<description>Returns <ref>true</ref> if there is a door with ID <p>number</p> on the specified map. If you leave out the map number, the current map will be assumed. This command is useful for avoiding script errors due to invalid door IDs.</description>
 		</command>
 		<command id="getdoorx">
-			<canon>get door x (number)</canon>
+			<canon>get door x (number, map)</canon>
 			<shortname>get door x</shortname>
-			<description>Returns the x coordinate (in tiles) of the numbered door.</description>
+			<description>Returns the x coordinate (in tiles) of the numbered door on the specified map. If you leave out the map number, the current map will be assumed.</description>
 			<seealso>
 				<ref>dooratspot</ref>
 			</seealso>
 		</command>
 		<command id="getdoory">
-			<canon>get door y (number)</canon>
+			<canon>get door y (number, map)</canon>
 			<shortname>get door y</shortname>
-			<description>Returns the y coordinate (in tiles) of the numbered door.</description>
+			<description>Returns the y coordinate (in tiles) of the numbered door on the specified map. If you leave out the map number, the current map will be assumed.</description>
 			<seealso>
 				<ref>dooratspot</ref>
 			</seealso>
 		</command>
 		<command id="getdoordestinationid">
-			<canon>get door destination id (number)</canon>
+			<canon>get door destination id (number, map)</canon>
 			<shortname>get door destination id</shortname>
-			<description>Returns the door id of the door linked to by the numbered door. To get the door's location, use <ref>getdoorx</ref> and <ref>getdoory</ref> when the player is on the destination map. If door <p>number</p> does not exist, or is not currently linked to any other door, then -1 is returned. <note>A door's destination can vary depending on the current game state. Check your doorlinks if you get unexpected results!</note></description>
+			<description>Returns the door id of the door linked to by the numbered door on the specified map. If you leave out the map number, the current map will be assumed. To get the door's location, use <ref>getdoorx</ref> and <ref>getdoory</ref>. If door <p>number</p> does not exist, or is not currently linked to any other door, then -1 is returned. <note>A door's destination can vary depending on the current game state. Check your doorlinks if you get unexpected results!</note></description>
 			<seealso>
 				<ref>getdoorx</ref>
 				<ref>getdoory</ref>
@@ -1262,9 +1262,9 @@ resume player</example>
 			</seealso>
 		</command>
 		<command id="getdoordestinationmap">
-			<canon>get door destination map (number)</canon>
+			<canon>get door destination map (number, map)</canon>
 			<shortname>get door destination map</shortname>
-			<description>Returns the map id of the door linked to by the numbered door. If door <p>number</p> does not exist, or is not currently linked to any other door, then -1 is returned. <note>A door's destination can vary depending on the current game state. Check your doorlinks if you get unexpected results!</note></description>
+			<description>Returns the map id of the destination door linked to by the numbered door on the specified map. If you leave out the map number, the current map will be assumed. If door <p>number</p> does not exist, or is not currently linked to any other door, then -1 is returned. <note>A door's destination can vary depending on the current game state. Check your doorlinks if you get unexpected results!</note></description>
 		</command>
 		<command id="dooratspot">
 			<canon>door at spot (x, y)</canon>
